# bsb-lookup

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile
.github/: dependabot.yml
.github/workflows/: CI.yml  update-csv.yml  update-database.yml
.github/workflows/scripts/: auspaynet_ftp_service.py  csv_update.py
.github/workflows/scritps/: auspaynet_ftp_service.py
scritps/: auspaynet_ftp_service.py  updater.py
src/bsb/: __init__.py  bank_info.py  dataset.py  exceptions.py  models.py  parser.py
src/bsb/static/: bsb_directory.csv  bsb_prefix_rules.csv  npp_supported.csv  npp_unsupported.csv
src/bsb/updater/: auspaynet_ftp_service.py  bank_list_generator.py  base_generator.py  database_generator.py  updater.py
tests/: __init__.py  test_methods.py
