[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name =  "bsb-lookup"
authors = [
    {name = "Ilan Kessler", email = "ilan@refundid.com"},
]
description = "Sample Python Project for creating a new Python Module"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.8.1"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "black==23.3.0",
    "check-manifest==0.49",
    "ruff==0.1.3",
    "mypy==1.6.1",
    "pre-commit==3.3.1",
    "pytest==7.4.3"
]

[project.urls]
Documentation = "https://github.com/ilankessler/bsb-lookup#readme"
Source = "https://github.com/ilankessler/bsb-lookup"
Tracker = "https://github.com/ilankessler/bsb-lookup/issues"

[tool.flit.module]
name = "bsb"

[tool.black]
line-length = 120
fast = true


[tool.ruff]
line-length = 120
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I', 'D', 'T']
# E501 is handled by black
extend-ignore = ['D105', 'D107', 'D205', 'D415', 'E501', 'D211', "D213"]
flake8-quotes = {inline-quotes = 'double', multiline-quotes = 'double'}
mccabe = { max-complexity = 14 }
isort = { known-first-party = ['pydantic', 'tests'], force-single-line = true }
target-version = "py311"
extend-exclude = ['pydantic/v1', 'tests/mypy/outputs']
ignore-init-module-imports = true
